fix: fix contact paragraph align

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -38,7 +38,7 @@ html body #contact #contact-content #contact-exs p
     font-family: 16px;
     width: 60vw;
     font-weight: 500;
-
+    text-align: center;
 }
 
 html body #contact #contact-content #contact-exs a
